# medifyy11

./: .gitignore  CLAUDE.md  README.md  deploy.env.example
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_super_admin_plans.py  0003_platform_governance.py  0004_consent_and_two_gates.py
backend/app/: analytics.py  audit.py  config.py  crypto.py  db.py  deps.py  envelope.py  errors.py  main.py  notify.py  ratelimit.py  security.py  totp.py
backend/app/api/v1/: admin_settings.py  approvals.py  auth.py  clinics_doctors.py  export.py  facilities.py  notifications.py  summary.py  superadmin.py  templates.py  visits.py  ws_transcribe.py
backend/app/models/: __init__.py  base.py  clinical.py  platform.py  system.py  tenancy.py
backend/app/pipelines/: __init__.py  deidentify.py  llm.py  run.py  speaker.py  stt.py
backend/app/prompts/: P2-summary@1.0.txt  P3-guidance@1.0.txt  P3-guidance@1.1.txt  P4-reverse-template@1.0.txt  P5-edit-chat@1.0.txt
backend/app/services/: billing.py  consent.py  export.py  fhir.py  retention.py  uploader.py  visits.py
backend/tests/: conftest.py  test_admin_and_billing.py  test_auth_and_errors.py  test_db_constraints.py  test_export_and_retention.py  test_isolation.py  test_speaker.py  test_super_admin.py  test_templates_and_ws.py  test_visit_flow.py
docs/: DECISIONS.md  FINAL-REPORT.md
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
(+63 files in other folders)
